--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="form_container">
+  <div class="form_container" action="#">
     <form action="" id="individual_form">
       <div class="input_container">
         <label for="name_title">Title</label>
@@ -48,6 +48,59 @@
         <i class="fas fa-exclamation-circle"></i>
         <small class="error_message">Error message</small>
       </div>
+      <div class="input_container">
+        <label for="gender">Gender</label>
+        <select name="gender" id="gender">
+          <option value>Please choose an option</option>
+          <option value="female">Female</option>
+          <option value="male">Male</option>
+        </select>
+        <i class="fas fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle"></i>
+        <small class="error_message">Error message</small>
+      </div>
+
+      <div class="radio_input_container">
+        <div class="quesion">
+          Social media choice
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+        </div>
+
+        <label for="twitter">
+          <input type="radio" name="social_media" id="twitter" value="Twitter"> Twitter
+        </label>
+        <label for="facebook">
+          <input type="radio" name="social_media" id="facebook" value="Facebook"> Facebook
+        </label>
+        <label for="instagram">
+          <input type="radio" name="social_media" id="instagram" value="Instagram"> Instagram
+        </label>
+        <small class="error_message">Error message</small>
+      </div>
+
+
+      <div class="radio_input_container">
+        <div class="quesion">
+          Currency
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+        </div>
+
+        <label for="khmer_riel">
+          <input type="checkbox" name="currency" id="khmer_riel" value="Khmer Riel"> Khmer Riel
+        </label>
+        <label for="us_dollar">
+          <input type="checkbox" name="currency" id="us_dollar" value="US Dollar"> US Dollar
+        </label>
+        <label for="other_currency">
+          <input type="checkbox" name="currency" id="other_currency" value="Other"> Other
+        </label>
+        <small class="error_message">Error message</small>
+      </div>
+
+      <input id="id" type="text" pattern="^aaaa$" value="aaaa">
+      <input type="submit">
     </form>
 
 
