send data to google form via jQuery.ajax()

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <!-- import font awesome icon -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
+  <!-- import jquery -->
+  <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  
+  <script defer src="formInfo.js"></script>
   <script src="script.js" defer></script>
 
   <title>Individual Forrm</title>
@@ -61,7 +65,7 @@
       </div>
 
       <div class="radio_input_container">
-        <div class="quesion">
+        <div class="question">
           Social media choice
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
@@ -81,7 +85,7 @@
 
 
       <div class="radio_input_container">
-        <div class="quesion">
+        <div class="question">
           Currency
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
@@ -99,11 +103,12 @@
         <small class="error_message">Error message</small>
       </div>
 
-      <input id="id" type="text" pattern="^aaaa$" value="aaaa">
+      <!-- <input id="id" type="text" pattern="^aaaa$" value="aaaa"> -->
       <input type="submit">
     </form>
 
 
   </div>
+
 </body>
 </html>
