--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script defer src="formInfo.js"></script>
   <script src="script.js" defer></script>
 
-  <title>Individual Forrm</title>
+  <title>Form</title>
 </head>
 <body>
 
@@ -104,7 +104,7 @@
       </div>
 
       <!-- <input id="id" type="text" pattern="^aaaa$" value="aaaa"> -->
-      <input type="submit">
+      <input type="submit" value="SEND">
     </form>
 
 
